# det-lora-train

./: .gitignore  README.md  diff_adapters.py  pyproject.toml  run_experiment.sh  train.py
experiments/: run_all.sh  run_long.sh  run_repeat.sh  run_resume.sh
runs/: cross_hw_3090_vs_a100_diff.txt  long_5hr_diff.txt  longer_fp32_500_diff.txt  resume_fp32_50_diff.txt
