[project]
name = "det-lora-train"
version = "0.1.0"
description = "Deterministic LoRA fine-tuning experiment"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "transformers==4.46.3",
    "peft==0.13.2",
    "datasets==3.1.0",
    "accelerate==1.1.1",
    "safetensors>=0.4.5",
    "numpy<2",
]

[tool.uv]
# Pin the torch index so cuda 12.4 wheels are picked up on the GPU box.
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
